[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "grip>=4.6.2",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "rdflib>=7.1.3",
    "selenium>=4.29.0",
    "spacy>=3.8.4",
    "webdriver-manager>=4.0.2",
]
